# iu-project-1

./: Pipfile  README.md  config.toml  noxfile.py  pyproject.toml  run_assignment.py
db/: IVOsDataBase.db
src/iu_project_1/: __init__.py  custom_exceptions.py  function_finder.py  function_finder_base.py
tests/: test_function_finder.py
tests/data/: simple_ideal.csv  simple_train.csv
