[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ivos_iu_project"
version = "0.0.1"
authors = [
  { name="Ivo Prahm", email="ivo@ivolino.de" },
]
description = "Written Assignment for Course: DLMDSPWP01 - Programming with Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Den-Prahms-ihr-Ivo/iu-project-1"
Issues = "https://github.com/Den-Prahms-ihr-Ivo/iu-project-1/issues"